.operator-builder/platform.addons.nukleros.io/secrets-component/external-secrets/manifests/deployment.yaml
---
# +operator-builder:resource:field=externalSecrets.include,value=true,include
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-secrets-cert-controller
  namespace: nukleros-secrets-system # +operator-builder:field:name=namespace,default="nukleros-secrets-system",type=string
  labels:
    app.kubernetes.io/name: external-secrets-cert-controller
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/version: v0.5.9 # +operator-builder:field:name=externalSecrets.version,default="v0.5.9",type=string
    platform.nukleros.io/category: secrets
    platform.nukleros.io/project: external-secrets
spec:
  # +operator-builder:field:name=externalSecrets.certController.replicas,default="1",type=int,description=`
  # Number of replicas to use for the external-secrets cert-controller deployment.`
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: external-secrets-cert-controller
      app.kubernetes.io/instance: external-secrets
  template:
    metadata:
      labels:
        app.kubernetes.io/name: external-secrets-cert-controller
        app.kubernetes.io/instance: external-secrets
        platform.nukleros.io/category: secrets
        platform.nukleros.io/project: external-secrets
    spec:
      serviceAccountName: external-secrets-cert-controller
      containers:
        - name: cert-controller
          # +operator-builder:field:name=externalSecrets.image,default=ghcr.io/external-secrets/external-secrets,type=string,replace="externalSecretsImage",description=`
          # Image repo and name to use for external-secrets.`
          # +operator-builder:field:name=externalSecrets.version,default="v0.5.9",type=string,replace="externalSecretsVersion",description=`
          # Version of external-secrets to use.`
          image: externalSecretsImage:externalSecretsVersion
          imagePullPolicy: IfNotPresent
          args:
            - certcontroller
            - --crd-requeue-interval=5m
            - --service-name=external-secrets-webhook
            - --service-namespace=nukleros-secrets-system
            - --secret-name=external-secrets-webhook
            - --secret-namespace=nukleros-secrets-system
          ports:
            - containerPort: 8080
              protocol: TCP
              name: metrics
          readinessProbe:
            httpGet:
              port: 8081
              path: /readyz
            initialDelaySeconds: 20
            periodSeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
            runAsUser: 65534
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - external-secrets-cert-controller
      nodeSelector:
        kubernetes.io/os: linux
---
# +operator-builder:resource:field=externalSecrets.include,value=true,include
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-secrets
  namespace: nukleros-secrets-system # +operator-builder:field:name=namespace,default="nukleros-secrets-system",type=string
  labels:
    app.kubernetes.io/name: external-secrets
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/version: v0.5.9 # +operator-builder:field:name=externalSecrets.version,default="v0.5.9",type=string
    platform.nukleros.io/category: secrets
    platform.nukleros.io/project: external-secrets
spec:
  # +operator-builder:field:name=externalSecrets.controller.replicas,default="2",type=int,description=`
  # Number of replicas to use for the external-secrets controller deployment.`
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: external-secrets
      app.kubernetes.io/instance: external-secrets
  template:
    metadata:
      labels:
        app.kubernetes.io/name: external-secrets
        app.kubernetes.io/instance: external-secrets
        platform.nukleros.io/category: secrets
        platform.nukleros.io/project: external-secrets
    spec:
      serviceAccountName: external-secrets
      containers:
        - name: external-secrets
          # +operator-builder:field:name=externalSecrets.image,default=ghcr.io/external-secrets/external-secrets,type=string,replace="externalSecretsImage",description=`
          # Image repo and name to use for external-secrets.`
          # +operator-builder:field:name=externalSecrets.version,default="v0.5.9",type=string,replace="externalSecretsVersion",description=`
          # Version of external-secrets to use.`
          image: externalSecretsImage:externalSecretsVersion
          imagePullPolicy: IfNotPresent
          args:
            - --concurrent=2
          ports:
            - containerPort: 8080
              protocol: TCP
              name: metrics
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
            runAsUser: 65534
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - external-secrets
      nodeSelector:
        kubernetes.io/os: linux
---
# +operator-builder:resource:field=externalSecrets.include,value=true,include
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-secrets-webhook
  namespace: nukleros-secrets-system # +operator-builder:field:name=namespace,default="nukleros-secrets-system",type=string
  labels:
    app.kubernetes.io/name: external-secrets-webhook
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/version: v0.5.9 # +operator-builder:field:name=externalSecrets.version,default="v0.5.9",type=string
    platform.nukleros.io/category: secrets
    platform.nukleros.io/project: external-secrets
spec:
  # +operator-builder:field:name=externalSecrets.webhook.replicas,default="2",type=int,description=`
  # Number of replicas to use for the external-secrets webhook deployment.`
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: external-secrets-webhook
      app.kubernetes.io/instance: external-secrets
  template:
    metadata:
      labels:
        app.kubernetes.io/name: external-secrets-webhook
        app.kubernetes.io/instance: external-secrets
        platform.nukleros.io/category: secrets
        platform.nukleros.io/project: external-secrets
    spec:
      hostNetwork: false
      serviceAccountName: external-secrets-webhook
      containers:
        - name: webhook
          # +operator-builder:field:name=externalSecrets.image,default=ghcr.io/external-secrets/external-secrets,type=string,replace="externalSecretsImage",description=`
          # Image repo and name to use for external-secrets.`
          # +operator-builder:field:name=externalSecrets.version,default="v0.5.9",type=string,replace="externalSecretsVersion",description=`
          # Version of external-secrets to use.`
          image: externalSecretsImage:externalSecretsVersion
          imagePullPolicy: IfNotPresent
          args:
            - webhook
            - --port=10250
            - --dns-name=external-secrets-webhook.nukleros-secrets-system.svc
            - --cert-dir=/tmp/certs
            - --check-interval=5m
          ports:
            - containerPort: 8080
              protocol: TCP
              name: metrics
            - containerPort: 10250
              protocol: TCP
              name: webhook
          readinessProbe:
            httpGet:
              port: 8081
              path: /readyz
            initialDelaySeconds: 20
            periodSeconds: 5
          volumeMounts:
            - name: certs
              mountPath: /tmp/certs
              readOnly: true
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
            runAsUser: 65534
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
      volumes:
        - name: certs
          secret:
            secretName: external-secrets-webhook
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - external-secrets-webhook
      nodeSelector:
        kubernetes.io/os: linux
