.operator-builder/platform.addons.nukleros.io/secrets-component/external-secrets/manifests/service.yaml
---
# +operator-builder:resource:field=externalSecrets.include,value=true,include
apiVersion: v1
kind: Service
metadata:
  name: external-secrets-webhook
  namespace: nukleros-secrets-system # +operator-builder:field:name=namespace,default="nukleros-secrets-system",type=string
  labels:
    app.kubernetes.io/name: external-secrets-webhook
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/version: v0.5.9 # +operator-builder:field:name=externalSecrets.version,default="v0.5.9",type=string
    external-secrets.io/component: webhook
    platform.nukleros.io/category: secrets
    platform.nukleros.io/project: external-secrets
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 10250
      protocol: TCP
      name: webhook
  selector:
    app.kubernetes.io/name: external-secrets-webhook
    app.kubernetes.io/instance: external-secrets
